2891897   Improve segmentation algortihm based on extremes